# HeiTang-kb-forge-skill

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.md.bak_v12_order  CONTRIBUTING.md  LICENSE  README.md  README.md.bak_clean_version_docs  README.md.bak_v12_order  README.zh-CN.md  README.zh-CN.md.bak_clean_version_docs  README.zh-CN.md.bak_v12_order  ROADMAP.md  SECURITY.md  SKILL.md  agent_chat.jsonl  architecture_gap_audit_report.json  artifact_openability_report.json  batch_parallel_readiness_report.json  byo_storage_security_readiness_report.json  byo_storage_security_readiness_report.md  capability_chain_status.json  capability_gap_map.json  cli_contract_audit_report.json  config_pipeline_audit_report.json  config_secret_handling_report.json  config_secret_handling_report.md  core_ui_contract_drift_final_report.json  core_ui_contract_drift_final_report.md  data_classification_report.json  data_classification_report.md  docs_truth_audit_report.json  error_stability_report.json  external_fusion_plan.json  external_project_benchmark_report.json  final_artifact_report_validation.json  final_bilingual_docs_parity_report.json  final_cli_config_pipeline_audit_report.json  (+56 more)
.github/: CODEOWNERS  pull_request_template.md
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/src/: main.rs
docs/: ACTION_CENTER.md  ACTION_CENTER.zh-CN.md  AGENT_COMPATIBILITY.md  AGENT_COMPATIBILITY.zh-CN.md  AGENT_INTEGRATION.md  AGENT_KB_ANSWER_POLICY.md  AGENT_KB_ANSWER_POLICY.zh-CN.md  AGENT_PACKAGE_GENERATOR.md  AGENT_PACKAGE_GENERATOR.zh-CN.md  AGENT_PLANNING_READINESS_GUIDE.md  AGENT_RAG_LAYER_GUIDE.md  AGENT_TOOL_INTERFACE_GUIDE.md  AIGC_BOOK_CONTENT_PIPELINE.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  ARCHITECTURE_GAP_AUDIT.md  ARCHITECTURE_GAP_AUDIT.zh-CN.md  BATCH_GOVERNANCE_CENTER.md  BATCH_GOVERNANCE_CENTER.zh-CN.md  BATCH_OPERATIONS.md  BATCH_OPERATIONS.zh-CN.md  BATCH_RETRY_RECOVERY.md  BATCH_RETRY_RECOVERY.zh-CN.md  BATCH_USAGE_GUIDE.md  BOOK_TO_SKILL_STRUCTURED_PACKAGE.md  BOOK_TO_SKILL_STRUCTURED_PACKAGE.zh-CN.md  CAPABILITY_GAP_MAP.md  CAPABILITY_GAP_MAP.zh-CN.md  CAPABILITY_MATRIX.md  CAPABILITY_STATUS.md  CAPABILITY_STATUS.zh-CN.md  CLI_ARCHITECTURE.md  CLI_ARCHITECTURE.zh-CN.md  COMMAND_REFERENCE.md  COMMAND_REFERENCE.zh-CN.md  COMPATIBILITY_MATRIX.md  COMPATIBILITY_MATRIX.zh-CN.md  CURATED_PACKAGE.md  CURATED_PACKAGE.zh-CN.md  CURRENT_TRUTH.md  (+238 more)
examples/: README.md
heitang_kb_forge/: cli.py  cli_runtime.py  doctor.py  release.py  studio.py  studio_v22.py
kb_forge/: cli.py
reports/: V1_ACCEPTANCE_AND_HARDENING_MASTER_PLAN.md  V1_CLEAN_BASELINE_RECONSTRUCTION_BATCH1_BLOCKER_REPORT.md  V1_COMPUTER_USE_ACCEPTANCE_DEEPSEEK_REVIEW_PACKET.md  V1_COMPUTER_USE_ACCEPTANCE_GAP_CLOSURE_DEEPSEEK_PACKET.md  V1_COMPUTER_USE_ACCEPTANCE_GAP_CLOSURE_REPORT.md  V1_COMPUTER_USE_ACCEPTANCE_REPORT.md  V1_COMPUTER_USE_ACCEPTANCE_RERUN_DEEPSEEK_PACKET.md  V1_COMPUTER_USE_ACCEPTANCE_RERUN_DEEPSEEK_RESULT.md  V1_COMPUTER_USE_ACCEPTANCE_RERUN_REPORT.md  V1_DEEPSEEK_EDGE_CDP_AUTOMATION_BLOCKER.md  V1_DEEPSEEK_EDGE_CDP_PREFLIGHT_REPORT.md  V1_FINAL_OWNER_REDECISION_READY_PACK.md  V1_FINAL_OWNER_REVIEW_CONDITIONAL_RESULT.md  V1_FINAL_OWNER_REVIEW_DEEPSEEK_REVIEW_PACKET.md  V1_FINAL_OWNER_REVIEW_MANUAL_DEEPSEEK_RESULT.md  V1_FINAL_OWNER_REVIEW_PREPARATION_PACK.md  V1_FINAL_OWNER_REVIEW_RESULT.md  V1_INVALIDATED_ACCEPTANCE_EVIDENCE_REPORT.md  V1_L1_AGENT_SUPPLEMENT_REPORT.md  V1_L1_BACKEND_DEEPWATER_ACCEPTANCE_PLAN.md  V1_L1_BACKEND_DEEPWATER_ACCEPTANCE_SUMMARY.md  V1_L1_BACKEND_DEEPWATER_AGENT_RUNTIME_RCA_REPORT.md  V1_L1_BACKEND_DEEPWATER_AGENT_RUNTIME_REPORT.md  V1_L1_BACKEND_DEEPWATER_CONNECTOR_SMOKE_REPORT.md  V1_L1_BACKEND_DEEPWATER_DATASET_PREP_REPORT.md  V1_L1_BACKEND_DEEPWATER_DEEPSEEK_REVIEW_PACKET.md  V1_L1_BACKEND_DEEPWATER_DOCUMENT_GENERATION_REPORT.md  V1_L1_BACKEND_DEEPWATER_EVIDENCE_CONSISTENCY_REPORT.md  V1_L1_BACKEND_DEEPWATER_FINAL_SELF_AUDIT_REPORT.md  (+57 more)
scripts/: agent_chat.py  (+3 more)
(+4623 files in other folders)
