[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kb-forge-skill"
version = "0.1.0"
description = "Local CLI skill for generating standardized knowledge base packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
kb-forge = "kb_forge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["kb_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
