[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kb-forge-skill"
version = "0.1.0"
description = "Local CLI skill for generating standardized knowledge base packages."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "kb-forge-skill contributors" },
]
license = "MIT"
keywords = ["knowledge-base", "cli", "markdown", "pdf", "docx", "jsonl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7,<3",
  "pypdf>=4,<7",
  "python-docx>=1,<2",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
kb-forge = "kb_forge.cli:app"

[project.urls]
Homepage = "https://github.com/your-username/kb-forge-skill"
Repository = "https://github.com/your-username/kb-forge-skill"
Issues = "https://github.com/your-username/kb-forge-skill/issues"

[tool.hatch.build.targets.wheel]
packages = ["kb_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
