[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heitang-kb-forge-skill"
version = "2.5.0-alpha.1"
description = "Local CLI skill for generating standardized knowledge base packages."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "HeiTang KB Forge Skill contributors" },
]
license = "MIT"
keywords = ["knowledge-base", "cli", "markdown", "pdf", "docx", "jsonl"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Text Processing",
  "Typing :: Typed",
]
dependencies = [
  "openpyxl>=3.1,<4",
  "pydantic>=2.7,<3",
  "pypdf>=4,<7",
  "PyYAML>=6,<7",
  "python-docx>=1,<2",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
ocr = [
  "pytesseract>=0.3,<1",
  "Pillow>=10,<12",
  "pypdfium2>=4,<5",
]
pdf-table = [
  "pdfplumber>=0.11,<1",
]
web = [
  "streamlit>=1.35,<2",
]
all = [
  "pytesseract>=0.3,<1",
  "Pillow>=10,<12",
  "pypdfium2>=4,<5",
  "pdfplumber>=0.11,<1",
]

[project.scripts]
heitang-kb-forge = "heitang_kb_forge.cli:app"

[project.urls]
Homepage = "https://github.com/HeiTang-HuaMei/HeiTang-kb-forge-skill"
Repository = "https://github.com/HeiTang-HuaMei/HeiTang-kb-forge-skill"
Issues = "https://github.com/HeiTang-HuaMei/HeiTang-kb-forge-skill/issues"

[tool.hatch.build.targets.wheel]
packages = ["heitang_kb_forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
