[package]
name = "heitang-kb-forge-desktop"
version = "1.2.3"
description = "Desktop wrapper for HeiTang KB Forge Skill"
authors = ["HeiTang KB Forge Skill contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
